--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.21.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
