--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.76.2",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.21.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
